syntax = "proto3";

package com.cognite.client.dto;

import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

/*
A potential match (match to object) together with the associated confidence score of the match.
 */
message EntityMatch {
    optional double score = 1;
    google.protobuf.Struct target = 2;
}

/*
An entity match result. The result contains the source (match from object) with a set of
potential matches along with a confidence score.
 */
message EntityMatchResult {
    google.protobuf.Struct source = 1;
    repeated EntityMatch matches = 2;
}

message MatchField {
    string source = 1;
    string target = 2;
}

/*
An entity match model. Represents a matching model along with its configuration and meta data.
 */
message EntityMatchModel {
    optional int64  id = 1;
    optional string external_id = 2;
    optional string status = 3;
    optional int64 created_time = 4;
    optional int64 start_time = 5;
    optional int64 status_time = 6;
    optional string name = 7;
    optional string description = 8;
    optional string feature_type = 9;
    repeated MatchField match_fields = 10;
    optional bool ignore_missing_fields = 11;
    optional string classifier = 12;
    optional string original_id = 13;
}
